--- a/doc/source/users/tutorials/howto/howto_advanced_python_fitting.ipynb
+++ b/doc/source/users/tutorials/howto/howto_advanced_python_fitting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced model manipulation and fitting in Python"
+    "# How to do advanced model manipulation and fitting in Python?"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "In this tutorial you will learn to perform some more advanced model manipulation and fitting from Python. You can use these methods in an interactive Python session to explore your dataset and improve the known model of the sky. You can also use them in a Python pipeline to test multiple model hypotheses and select the one that is most appropriate.\n",
     "\n",
-    "As usual we start by importing the gammalib, ctools, and cscripts Python modules."
+    "As usual start by importing the gammalib, ctools, and cscripts Python modules."
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this tutorial we will also use the matplotlib package for plotting."
+    "Now import the matplotlib package for plotting."
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "## Simulated dataset\n",
     "\n",
-    "For the tutorial we will simulate a small dataset. We start by defining the Instrument Response Function and energy range that we will use all along."
+    "For the tutorial you will simulate a small dataset. Start by defining the Instrument Response Function and energy range that will be used all along."
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we proceed to simulate the dataset. It consists of an hour of observations of the Crab nebula region, as usual pointed at a slightly offset position from the target. The input model is different from the one you have been using so far and contains some surprises. Don't look at it until you have completed the exercises at the end of the tutorial."
+    "Now proceed to simulate the dataset. It consists of an hour of observations of the Crab nebula region, as usual pointed at a slightly offset position from the target. The input model is different from the one you have been using so far and contains some surprises. Don't look at it until you have completed the exercises at the end of the tutorial."
    ]
   },
   {
@@ -105,9 +105,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have saved the events on disk in the file `events.fits`. In this way you can easily re-use the code below by substituting `events.fits` with your own event list of observation definition XML file.\n",
+    "You have saved the events on disk in the file `events.fits`. In this way you can easily re-use the code below by substituting `events.fits` with your own event list or observation definition XML file.\n",
     "\n",
-    "We will peek at the simulated dataset by displaying a skymap."
+    "Let's first peek at the simulated dataset by displaying a skymap."
    ]
   },
   {
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "# We slightly smooth the map for display to suppress statistical fluctuations\n",
+    "# Slightly smooth the map for display to suppress statistical fluctuations\n",
     "skymap.skymap().smooth('GAUSSIAN',0.02)\n",
     "\n",
     "from matplotlib.colors import SymLogNorm\n",
@@ -174,7 +174,7 @@
    "source": [
     "## Model fitting and residual inspection\n",
     "\n",
-    "First, we will fit the usual Crab model to the data. We will be using a 3D unbinned analysis."
+    "First, fit the usual Crab model to the data using a 3D unbinned analysis."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As usual it is wise to look at the output from the optimizer. We will also store the best-fit minus log-likelihood value for later usage."
+    "As usual it is wise to look at the output from the optimizer. Store the best-fit minus log-likelihood value for later usage."
    ]
   },
   {
@@ -286,7 +286,7 @@
    "source": [
     "The background model reproduces well the data, since its best-fit normalization is 1 and the index/tilt is 0. The Crab nebula has a best-fit spectral index of 2.28.\n",
     "\n",
-    "To assess whether the model reproduces well the data spatially we will calculate a residual map."
+    "To assess whether the model reproduces well the data spatially generate a residual map."
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be inspecting several of these residual maps along the tutorial, so we define a function to plot them, and apply it to our latest run."
+    "To easily inspecting the residual maps along the tutorial, define a function to plot them, and apply it to the latest run."
    ]
   },
   {
@@ -323,15 +323,15 @@
    "outputs": [],
    "source": [
     "def plot_residuals(resid):\n",
-    "    # We slightly smooth the map for display to suppress statistical fluctuations\n",
+    "    # Slightly smooth the map for display to suppress statistical fluctuations\n",
     "    resid.smooth('GAUSSIAN',0.04)\n",
-    "    #plotting\n",
+    "    # Plotting\n",
     "    fig = plt.figure()\n",
     "    ax  = plt.subplot()\n",
     "    plt.imshow(resid.array(),origin='lower',\n",
     "               cmap='bwr',vmin=-3,vmax=3,\n",
     "               extent=[83.63+0.02*20,83.63-0.02*20,22.01-0.02*20,22.01+0.02*20])\n",
-    "            # boundaries of the coord grid\n",
+    "               # Boundaries of the coord grid\n",
     "    ax.set_xlabel('R.A. (deg)')\n",
     "    ax.set_ylabel('Dec (deg)')\n",
     "    cbar = plt.colorbar()\n",
@@ -364,7 +364,7 @@
    "source": [
     "## Adding model components\n",
     "\n",
-    "The residual map shows a cluster of positive residuals on the South-West of the Crab nebula. Is this another source? To test this hypothesis we will add a point source at the position that we can guess from the residual map."
+    "The residual map shows a cluster of positive residuals on the South-West of the Crab nebula. Is this another source? To test this hypothesis add a point source at the position that you can guess from the residual map."
    ]
   },
   {
@@ -382,13 +382,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have defined a sky model object that has three components:\n",
+    "You have defined a sky model object that has three components:\n",
     "\n",
     "- a spatial model, which is a point source at the position guessed from the residual map;\n",
     "- a spectral model which is a power law with spectral index 2, and a flux which approximately 1/10 of the Crab nebula;\n",
     "- a temporal model which is a constant.\n",
     "\n",
-    "We will name this source Src1, and free its position (fixed by default when a new source is created), so that we can fit it to the data."
+    "Name this source `Src1`, and free its position (fixed by default when a new source is created), so that you can fit it to the data:"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we append the new source to the model"
+    "Finally append the new source to the model container"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and we fit the model including the new source to the data."
+    "and fit the model including the new source to the data."
    ]
   },
   {
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Does the addition of the new source provide a better fit to the data? We can quantify this using the test statistic (TS) given by twice the log-likelihood difference."
+    "Does the addition of the new source provide a better fit to the data? You can quantify this using the test statistic (TS) given by twice the log-likelihood difference."
    ]
   },
   {
@@ -475,9 +475,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TS is expected to be distributed as a $\\chi^2$ with n degrees of freedom, where n is the additional number of degrees of freedom in the model including the new source, in our case 4 (RA, Dec, Prefactor, and Index). The integral of the $\\chi^2$ from TS to $\\infty$ is the chance probability that the likelihood improved by that much due to statistical fluctuations. A large value, like the one we got, means that the chance probability is very low, thus we are likely to have found a new source.\n",
+    "TS is expected to be distributed as a $\\chi^2_n$ with n degrees of freedom, where n is the additional number of degrees of freedom in the model including the new source, in our case 4 (RA, Dec, Prefactor, and Index). The integral of the $\\chi^2_n$ from TS to $\\infty$ is the chance probability that the likelihood improved by that much due to statistical fluctuations. A large value, like the one we got, means that the chance probability is very low, thus we are likely to have found a new source.\n",
     "\n",
-    "To make sure the new source improves the data/model agreement we will look again at the residual map."
+    "To make sure the new source improves the data/model agreement look again at the residual map."
    ]
   },
   {
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The addition of the new point source has flattened the spatial residuals, even though the fit is not perfect yet obviously. From now on we will fix the position of Scr1."
+    "The addition of the new point source has flattened the spatial residuals, even though the fit is obviously not perfect yet. From now on fix the position of `Src1`."
    ]
   },
   {
@@ -527,7 +527,7 @@
    "source": [
     "## Modifying the spectral models\n",
     "\n",
-    "Next we will check if the model agrees well with the data at all energies. We will start by defining a function to make and plot residual maps in separate energy ranges."
+    "Next check if the model agrees well with the data at all energies. Start by defining a function to make and plot residual maps in separate energy ranges."
    ]
   },
   {
@@ -583,15 +583,15 @@
    ],
    "source": [
     "resmap_erange([[emin,1.],\n",
-    "              [1.,10.],\n",
-    "              [10.,emax]])"
+    "               [1.,10.],\n",
+    "               [10.,emax]])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most obvious problem is a negative residual cluster at the position of the Crab nebula at the highest energies. We will change the spectral model of the crab nebula and test if this improves the fit. We will use an exponentially cutoff power-law rather than a simple power law. We will use as starting values for the Prefactor and Index the current best-fit values and tentatively set the cutoff energy at 1 TeV."
+    "The most obvious problem is a negative residual cluster at the position of the Crab nebula at the highest energies. Change the spectral model of the Crab nebula and test if this improves the fit. Try for example an exponentially cutoff power-law rather than a simple power law. Let's use as starting values for the Prefactor and Index the current best-fit values and tentatively set the cutoff energy at 1 TeV."
    ]
   },
   {
@@ -613,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now fit the modified model to the data"
+    "Now fit the modified model to the data"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and use TS to quantify the model improvement (in this case we have only one additional degree of freedom, the ctuoff energy)."
+    "and use TS to quantify the model improvement (in this case there is only one additional degree of freedom, the ctuoff energy)."
    ]
   },
   {
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best-fit cutoff energy is 3.3 TeV, which seems consistent with the behavior in the energy-bands residual maps above. Note that this has changed significantly the Index value, that now is 1.83. We will check the residual maps again to make sure."
+    "The best-fit cutoff energy is 3.3 TeV, which seems consistent with the behavior in the energy-bands residual maps above. Note that this has changed significantly the Index value, that now is 1.83. Check the residual maps again to make sure that the residuals are reduced."
    ]
   },
   {
@@ -737,15 +737,15 @@
    ],
    "source": [
     "resmap_erange([[emin,1.],\n",
-    "              [1.,10.],\n",
-    "              [10.,emax]])"
+    "               [1.,10.],\n",
+    "               [10.,emax]])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we actually have an excess at the highest energies. In spite of the significant likelihood improvement the model is not quite perfect yet. Is there perhaps a new spectral component appearing at high energies? We will test if the addition of a power-law spectral component with a hard index (2). It will be added to the exponentially-cutoff power law in a composite spectral model."
+    "Now you actually have an excess at the highest energies. In spite of the significant likelihood improvement the model is not quite perfect yet. Is there perhaps a new spectral component appearing at high energies? Test if the addition of a power-law spectral component with a hard index (2) improves things. To do this, add the hard spectral component to the exponentially-cutoff power law using a composite spectral model."
    ]
   },
   {
@@ -793,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The likelihood improvement is again significant, but did we already find the best possible model of the sky?"
+    "The likelihood improvement is again significant, but is this the best possible model of the sky?"
    ]
   },
   {
