Add Jupyter notebook for the connection of observations with models

--- a/doc/source/users/tutorials/howto/howto_combine_observations.ipynb
+++ b/doc/source/users/tutorials/howto/howto_combine_observations.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"../../../_downloads/combining-observations.ipynb\" download=\"combining-observations.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
+    "<div align=\"right\"><a href=\"../../../_downloads/howto_combine_observations.ipynb\" download=\"howto_combine_observations.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
   },
   {
