--- a/doc/source/users/tutorials/howto/howto_advanced_python_fitting.ipynb
+++ b/doc/source/users/tutorials/howto/howto_advanced_python_fitting.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"../../../_downloads/advanced-python-fitting.ipynb\" download=\"advanced-python-fitting.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
+    "<div align=\"right\"><a href=\"../../../_downloads/howto_advanced_python_fitting.ipynb\" download=\"howto_advanced_python_fitting.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
   },
   {
