--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-01-24
+2018-01-25
 
         * Version 1.5.0 released
         ========================
 
+        Correct diffuse map cube upper limit computation in ctulimit (#2298)
         Add tmin and tmax parameters to csobsselect (#2297)
         Change DATE_OBS, DATE_END, TIME_OBS and TIME_END FITS keywords into DATA-OBS,
           DATE-END, TIME-OBS and TIME-END
