Update 1DC How-tos

--- a/doc/source/users/tutorials/howto/howto_connect_models.ipynb
+++ b/doc/source/users/tutorials/howto/howto_connect_models.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"../../../_downloads/howto_connect_models.ipynb\" download=\"combining-observations.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
+    "<div align=\"right\"><a href=\"../../../_downloads/howto_connect_models.ipynb\" download=\"howto_connect_models.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
   },
   {
