Add release date to release history

--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -1,7 +1,7 @@
 .. _1.5:
 
-ctools 1.5 release
-==================
+ctools 1.5 release (28 January 2018)
+====================================
 
 Overview
 --------
