--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2018-02-08
 
+        * Version 1.6.0 released
+        ========================
+
+
         * Bug fix version 1.5.1 released
         ================================
 
