--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -22,6 +22,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2311 <https://cta-redmine.irap.omp.eu/issues/2311>`_] -
+  Allow specifying of input skymap to :ref:`ctskymap` tool
 * [`2309 <https://cta-redmine.irap.omp.eu/issues/2309>`_] -
   Accelerate `IRF` and `RING` background methods in :ref:`ctskymap`
 
