--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-02-10
+2018-02-13
 
         * Version 1.6.0 released
         ========================
 
+        Allow specifying of input sky map in ctskymap (#2311)
         Accelerate IRF and RING background methods in ctskymap (#2309)
 
 
