--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-02-10
+2018-02-14
 
         * Version 1.6.0 released
         ========================
 
+        Add ras() and decs() methods to csobsinfo (#2313)
         Accelerate IRF and RING background methods in ctskymap (#2309)
 
 
