--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -22,6 +22,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2313 <https://cta-redmine.irap.omp.eu/issues/2313>`_] -
+  Add `ras()` and `decs()` methods to :ref:`csobsinfo`
 * [`2309 <https://cta-redmine.irap.omp.eu/issues/2309>`_] -
   Accelerate `IRF` and `RING` background methods in :ref:`ctskymap`
 
