--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-02-16
+2018-03-26
 
         * Bug fix version 1.5.1 released
         ================================
 
+        Fix MANPATH for Mac OS X systems (#2420)
         Take energy dispersion in csresspec modelling into account (#2341)
         Enable using csphagen for HESS, VERITAS and MAGIC observations (#2307)
 
