Update for release 1.5.1

--- a/doc/source/admin/release_history/1.5.1.rst
+++ b/doc/source/admin/release_history/1.5.1.rst
@@ -1,7 +1,7 @@
 .. _1.5.1:
 
-ctools 1.5.1 release
-====================
+ctools 1.5.1 release (26 March 2018)
+====================================
 
 Overview
 --------
