Add show_rmf.py example script

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-02-14
+2018-04-09
 
         * Version 1.6.0 released
         ========================
 
+        Add show_rmf.py example script
         Allow specifying of input sky map in ctskymap (#2311)
         Add ras() and decs() methods to csobsinfo (#2313)
         Accelerate IRF and RING background methods in ctskymap (#2309)
