--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-04-09
+2018-04-10
 
         * Version 1.6.0 released
         ========================
 
+        Keep existing library path in installation script on Mac OS X (#2420)
         Add show_rmf.py example script
         Allow specifying of input sky map in ctskymap (#2311)
         Add ras() and decs() methods to csobsinfo (#2313)
