--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2018-04-26
+
+        * Bug fix version 1.5.2 released
+        ================================
+
+        Only for compliance with GammaLib 1.5.2
+
+
 2018-03-26
 
         * Bug fix version 1.5.1 released
