--- a/doc/source/admin/release_history/1.5.2.rst
+++ b/doc/source/admin/release_history/1.5.2.rst
@@ -8,5 +8,5 @@ Overview
 
 ctools 1.5.2 is a bug fix release for ctools release 1.5.
 
-None changes were made to the code base. The bug fix release is made for
+No changes were made to the code base. The bug fix release is made for
 compliance reasons with the GammaLib 1.5.2 bug fix release.
